# hardware-master

./: Cargo.toml  LICENSE  README.md  build.rs  icon.rc
doc/: 硬大师.md  硬大师图标.html
src/: constants.rs  lib.rs  main.rs
src/detector/: audio.rs  battery.rs  cpu.rs  disk.rs  gpu.rs  memory.rs  mod.rs  monitor.rs  motherboard.rs  network.rs  system.rs
src/iddb/: mod.rs  usb.ids
src/ui/: app.rs  font.rs  mod.rs  theme.rs
src/utils/: device.rs  macros.rs  math.rs  mod.rs  registry.rs  string.rs  wmi.rs  wmi_date.rs
tests/: generate_total_name.rs  test_cpu_detection.rs  test_disk_detection.rs  test_gpu_detection.rs  test_memory_detection.rs  test_memory_name.rs  test_monitor_detection.rs  test_system_detection.rs  test_theme.rs  test_utils.rs
